--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -26,8 +26,9 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.0.1-jre'
 
-// https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+// https://mvnrepository.com/artifact/io.reactivex/rxjava
+    implementation 'io.reactivex:rxjava:1.3.8'
+
 
 }
 
