--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 // https://mvnrepository.com/artifact/io.reactivex/rxjava
     implementation 'io.reactivex:rxjava:1.3.8'
 
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor  'org.projectlombok:lombok:1.18.24'
+
 
 }
 
