--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor  'org.projectlombok:lombok:1.18.24'
 
+    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
+
 
 }
 
