--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,26 +17,15 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.0.1-jre'
-
-// https://mvnrepository.com/artifact/io.reactivex/rxjava
     implementation 'io.reactivex:rxjava:1.3.8'
-
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor  'org.projectlombok:lombok:1.18.24'
-
-    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
     testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
-
-
+    implementation 'io.github.benas:random-beans:3.9.0'
 }
 
 tasks.named('test') {
