--- a/activemq/build.gradle
+++ b/activemq/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+
+    implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'org.springframework.boot:spring-boot-starter-activemq'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
