--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+
 }
 
 tasks.named('test') {
