--- a/twitter4jexample/build.gradle
+++ b/twitter4jexample/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.jeasy/easy-random-randomizers
     implementation 'org.jeasy:easy-random-randomizers:5.0.0'
 
+    // https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core
+    implementation 'org.twitter4j:twitter4j-core:4.0.7'
+    implementation 'org.twitter4j:twitter4j-stream:4.0.7'
+
 
 
 
