--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ rootProject.name = 'RxJavaRefactoringExample'
 include('lib')
 include 'activemq'
 include 'twitter4jexample'
+include 'springexample'
