--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,6 @@
 
 rootProject.name = 'RxJavaRefactoringExample'
 include('lib')
-include 'activemq'
-include 'twitter4jexample'
-include 'springexample'
+//include 'activemq'
+//include 'twitter4jexample'
+//include 'springexample'
