--- a/activemq/build.gradle
+++ b/activemq/build.gradle
@@ -16,6 +16,9 @@ dependencies {
 
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'org.springframework.boot:spring-boot-starter-activemq'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'io.netty:netty:3.10.6.Final'
+    implementation 'io.netty:netty-bom:4.1.82.Final'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
