--- a/springexample/build.gradle
+++ b/springexample/build.gradle
@@ -4,4 +4,7 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'org.twitter4j:twitter4j-core:4.0.7'
     implementation 'org.twitter4j:twitter4j-stream:4.0.7'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'io.netty:netty:3.10.6.Final'
+    implementation 'io.netty:netty-bom:4.1.82.Final'
 }
