--- a/twitter4jexample/build.gradle
+++ b/twitter4jexample/build.gradle
@@ -17,6 +17,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'io.netty:netty:3.10.6.Final'
+    implementation 'io.netty:netty-bom:4.1.82.Final'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     api 'org.apache.commons:commons-math3:3.6.1'
 
