--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,6 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'io.netty:netty:3.10.6.Final'
     implementation 'io.netty:netty-bom:4.1.82.Final'
+    implementation 'io.reactivex:rxnetty:0.5.1'
+    implementation 'io.reactivex:rxnetty-tcp:0.5.3'
 }
