--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework.data/spring-data-jdbc
     implementation 'org.springframework.data:spring-data-jdbc:2.4.3'
+    // https://mvnrepository.com/artifact/org.assertj/assertj-core
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 
 
 }
