--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.assertj/assertj-core
     testImplementation 'org.assertj:assertj-core:3.23.1'
 
+    implementation 'io.dropwizard.metrics:metrics-core:4.2.12'
+
 
 }
 
