--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -60,6 +60,10 @@ dependencies {
 
     implementation 'io.dropwizard.metrics:metrics-core:4.2.12'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+
 
 }
 
