--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
 
+    // https://mvnrepository.com/artifact/com.netflix.hystrix/hystrix-core
+    implementation 'com.netflix.hystrix:hystrix-core:1.5.18'
+
 
 }
 
